--- a/index.html
+++ b/index.html
@@ -139,16 +139,16 @@
         // of the image file you placed in your project folder.
         const PLANT_ASSETS = [
             {
-                name: "Norway Spruce",
+                name: "Red Maple",
                 type: 'tree',
                 // *** UPDATED Path: Assuming this file is in the 'images' folder now ***
-                src: "images/Gemini_Generated_Image_x0avgsx0avgsx0av.jpg"
+                src: "images/redmaple.jpeg"
             },
             {
-                name: "Autumn Blaze Maple",
+                name: "Spruce",
                 type: 'tree',
                  // Placeholder - Replace with your actual transparent image URL
-                src: "https://placehold.co/100x120/FF4500/FFF?text=Autumn+Blaze"
+                src: "images/spruce.jpeg"
             },
             {
                 name: "Blue Spruce",
